kubernetes/apps/apps/reactive-resume/reactive-resume/app/chrome-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chrome
spec:
  selector:
    app: chrome
  ports:
    - port: 3000
      targetPort: 3000
      name: ws
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chrome
  template:
    metadata:
      labels:
        app: chrome
    spec:
      containers:
        - name: chrome
          image: ghcr.io/browserless/chromium:v2.47.0
          ports:
            - containerPort: 3000
              name: ws
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
